# game-with-nlp

./: .gitignore  Character.py  Game.py  Item.py  LICENSE  Main.py  Model1.py  Model2.py  README.md  Shop.py  Sprite.py  SpriteSheet.py  TextClassifier.py  TextInput.py  TextUtils.py  VoiceInput.py  eval.py  pyproject.toml  pyrightconfig.json  test_regressions.py
docs/superpowers/specs/: 2026-05-13-voice-input-design.md
game/: Building.py  Character.py  Color.py  Game.py  GameConfig.py  GameUtils.py  Item.py  Shop.py  Sprite.py  SpriteSheet.py  TextInput.py  TextInputEnvironment.py  UIFont.py  VoiceInput.py  __init__.py
inference/: TextClassifier.py  __init__.py  eval.py  model1_sklearn.joblib  model2_sklearn.joblib
training/: Model1.py  Model2.py  __init__.py
training/my_data/: buy.txt  combat.txt  find.txt  movement.txt  take.txt  unknown.txt  use.txt
training/my_data2/: box.txt  map.txt
