[project]
name = "nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
    "faster-whisper>=1.1",
    "joblib>=1.3",
    "numpy>=1.26",
    "pygame>=2.6.1",
    "scikit-learn>=1.4",
    "sentence-transformers>=3.4",
    "sounddevice>=0.5",
    "torch>=2.2",
    "transformers>=4.48",
]
